[workspace]
members = [
    "crates/trapeze",
    "crates/trapeze-codegen",
    "crates/trapeze-macros",
    "crates/trapeze-examples",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.2.0"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/jprendes/trapeze"
homepage = "https://github.com/jprendes/trapeze"

[workspace.dependencies]
# workspace packages
trapeze = { path = "crates/trapeze", version = "0.2.0" }
trapeze-codegen = { path = "crates/trapeze-codegen", version = "0.2.0" }
trapeze-macros = { path = "crates/trapeze-macros", version = "0.2.0" }
trapeze-examples = { path = "crates/trapeze-examples", version = "0.2.0" }

# common packages
prost-build = "0.12"
prost = "0.12"
tokio = "1"
