[package]
name = "trapeze"
description = "A rust implementation of ttrpc"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
trapeze-codegen = { workspace = true }
trapeze-macros = { workspace = true }
prost = { workspace = true }
prost-types = "0.12"
tokio = { workspace = true, features = ["io-util", "rt", "sync", "time", "macros"] }
thiserror = "1"
bitflags = "2"
futures = "0.3"
async-stream = "0.3"
tokio-stream = "0.1"
async-trait = "0.1"
log = "0.4"

[target.'cfg(windows)'.dependencies]
windows-sys = "0.52"

[target.'cfg(unix)'.dependencies]
tokio-vsock = { version = "0.5", optional = true }

[features]
default = [ "vsock" ]
vsock = [ "dep:tokio-vsock" ]
